--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,8 @@ p{
     background-color: palevioletred;
     border: 5px solid rgb(239, 23, 95);
 }
+img{
+    width: 480px;
+    height: 800px;
+    margin: 0 auto;
+}
