--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body{
-background-color: bisque;
-color: brown;
+background-color: rgb(254, 207, 221);
+color: rgb(111, 2, 38);
 }
 p{
-    background-color: palevioletred;
-    border: 5px solid rgb(239, 23, 95);
+    background-color: rgb(245, 59, 121);
+    border: 2px hidden rgb(112, 42, 85);
 }
 img{
     width: 480px;
